# solemne-data-atelier

./: .env  README.md  pyproject.toml
notebooks/: method_evaluation_two_methods.ipynb
src/solemne_data_atelier/: __init__.py  __main__.py  config.toml  evaluation.py  logging.py  passim_validation_app.py  preprocessing.py  utils.py  vector_store.py
src/solemne_data_atelier/commands/: __init__.py  download.py  preprocess.py  vectorstore.py
src/solemne_data_atelier/methods/: __init__.py  direct_prompting.py  passim.py  simple_embedding.py
